Test Sandbox Project/src/objects/Training_Track_Level_Item__c.object
<CustomObject>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Plan</label>
        <referenceTo>Training_Plan__c</referenceTo>
        <relationshipLabel>Training Track Level Items</relationshipLabel>
        <relationshipName>Training_Track_Level_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Track_Level__c</fullName>
        <label>Training Track Level</label>
        <referenceTo>Training_Track_Level__c</referenceTo>
        <relationshipLabel>Training Track Level Items</relationshipLabel>
        <relationshipName>Training_Track_Level_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Training Track Level Item</label>
    <nameField>
        <displayFormat>TTLI-{0000000}</displayFormat>
        <label>Training Track Level Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Track Level Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>